# FTP-Service

./: .dockerignore  .drone.yml  .env  Cargo.toml  Dockerfile  README.org
.github/workflows/: featureRelease.yml  featureTests.yml  latestRelease.yml  masterTests.yml  stableRelease.yml
api/: Cargo.toml
api/src/: lib.rs
api/src/ffs_api/: endpoints.rs  mod.rs
api/src/ffs_api/models/: contents_resource.rs  error_response.rs  folder_creation_resource.rs  inode_resource.rs  inode_timestamp_update_ressource.rs  mod.rs  move_resource.rs  rename_resource.rs  upload_resource.rs  user_edit_resource.rs  user_register_resource.rs  user_resource.rs
api/src/models/: contents_resource.rs  folder_creation_resource.rs  mod.rs  move_resource.rs  preflight_request_resource.rs  preflight_response_resource.rs  user_resource.rs
auth/: Cargo.toml
auth/src/: auth.rs  lib.rs  user.rs
server/: Cargo.toml
server/src/: backend.rs  ext.rs  lib.rs  metadata.rs  utils.rs
server/src/api/: mod.rs
server/src/auth/: authenticator.rs  mod.rs
server/src/backend/: metadata.rs  mod.rs  storage_backend.rs  utils.rs  utils_test.rs
src/: cli.rs  lib.rs  main.rs
