[package]
name = "ftp-fighter"
version = "1.0.2"
edition = "2021"
authors = ["open-schnick <dev2@filefighter.de>", "qvalentin <valentin.theodor@web.de>"]

[workspace]
members = [".", "server", "api"]

[dependencies]
# cli parsing
clap = { version = "4.3.4", features = ["derive", "env"] }
# ftp lib
libunftp = "0.18.9"
# own implementations
unftp-filefighter = { path = "server" }
filefighter-api = { path = "api" }
# async
tokio = { version = "1.28.2", features = ["full"] }
# logging and log panics better
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
color-eyre = "0.6.2"
# Reading cli args from env file
dotenvy = "0.15.7"
