[package]
name = "filefighter-api"
version = "1.0.2"
edition = "2021"
authors = ["open-schnick <dev2@filefighter.de>", "qvalentin <valentin.theodor@web.de>"]

[dependencies]
reqwest = { version = "0.11.18", features = ["json", "cookies","multipart","stream"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
sha256 = "1.1.3"
thiserror = "1.0.40"
tracing = "0.1.38"
tokio = "1.28.2"
tokio-stream = "0.1.14"
futures = "0.3.28"
tokio-util = { version = "0.7.8", features = ["compat","io"] }
new_mime_guess = "4.0.1"
