[package]
name = "unftp-filefighter"
version = "1.0.0"
edition = "2021"
authors = ["open-schnick <dev2@filefighter.de>", "qvalentin <valentin.theodor@web.de>"]

[dependencies]
async-trait = "0.1.56"
libunftp = "0.18.5"
tokio = "1.21.1"
tracing = "0.1.36"
url = "2.3.1"
filefighter-api = { path = "../api" }
chrono = "0.4.22"
