[package]
name = "unftp-filefighter"
version = "1.0.1"
edition = "2021"
authors = ["open-schnick <dev2@filefighter.de>", "qvalentin <valentin.theodor@web.de>"]

[dependencies]
async-trait = "0.1.64"
libunftp = "0.18.8"
tokio = "1.25.0"
tracing = "0.1.37"
url = "2.3.1"
filefighter-api = { path = "../api" }
chrono = "0.4.23"
