[package]
name = "unftp-filefighter"
version = "1.0.2"
edition = "2021"
authors = ["open-schnick <dev2@filefighter.de>", "qvalentin <valentin.theodor@web.de>"]

[dependencies]
async-trait = "0.1.68"
libunftp = "0.18.8"
tokio = "1.28.1"
tracing = "0.1.38"
url = "2.3.1"
filefighter-api = { path = "../api" }
chrono = "0.4.24"
